# project3

./: README.md  index.html  make_mp3.py  tts.launch.py  tts_node.py
aruco_localizer/: setup.py
aruco_localizer/aruco_localizer/: aruco_localizer_node.py
aruco_localizer/config/: marker_layout.json
aruco_localizer/launch/: aruco_localizer.launch.py
myagv_description/: package.xml
myagv_description/urdf/: myAGV_gazebo.urdf
myagv_description/worlds/: myagv_real_map.world
myagv_navigation2/: CMakeLists.txt  package.xml
myagv_navigation2/config/: marker_layout.json
myagv_navigation2/launch/: myagv_slam.launch.py
myagv_navigation2/map/: sim_map.pgm
myagv_navigation2/param/: myagv.yaml
myagv_odometry/: CMakeLists.txt  package.xml
myagv_odometry/config/: ekf.yaml
myagv_odometry/include/myagv_odometry/: myAGV.h
myagv_odometry/launch/: myagv_active.launch.py
myagv_odometry/src/: myAGV.cpp  myAGVSub.cpp
mycobot_ros2/mecharm/mecharm/: package.xml
mycobot_ros2/mecharm/mecharm_interfaces/: package.xml
mycobot_ros2/myArm/myarm_300/: package.xml
mycobot_ros2/mycobot_280/mycobot_280/: package.xml
mycobot_ros2/mycobot_280/mycobot_280_arduino/: package.xml
mycobot_ros2/mycobot_280/mycobot_280_moveit2_control/: package.xml
mycobot_ros2/mycobot_280/mycobot_280jn/: package.xml
mycobot_ros2/mycobot_280/mycobot_interfaces/: package.xml
mycobot_ros2/mycobot_320/mycobot_320/: package.xml
mycobot_ros2/mycobot_320/mycobot_320_riscv/: package.xml
mycobot_ros2/mycobot_320/mycobot_320pi/: package.xml
mycobot_ros2/mycobot_pro/mycobot_630/: package.xml
mycobot_ros2/mycobot_pro/mycobot_630_moveit2/: CMakeLists.txt  package.xml
mycobot_ros2/mycobot_pro/mycobot_pro450_interfaces/: CMakeLists.txt  package.xml
mycobot_ros2/mycobot_pro/pro450_moveit2_control/: package.xml
mycobot_ros2/mypalletizer_260/mypalletizer_260/: setup.cfg
mycobot_ros2/mypalletizer_260/mypalletizer_communication/: package.xml
mycobot_ros2/mypalletizer_260/mypalletizer_interfaces/: package.xml
navigation2/nav2_waypoint_follower/: CMakeLists.txt
pick_place_pkg/: setup.py
pick_place_pkg/launch/: pose_target.launch.py
pick_place_pkg/pick_place_pkg/: pi_sender_node.py  pose_target_controller.py
src/: moveit_mycobot_bridge.py
src/aruco_localizer/: package.xml  setup.cfg  setup.py
src/aruco_localizer/aruco_localizer/: aruco_localizer_node.py  go_to_xy_node.py
src/aruco_localizer/launch/: aruco_localizer.launch.py
src/myagv_description/: CMakeLists.txt
src/myagv_description/meshes/: myagv_up.stl
src/myagv_description/urdf/: myAGV.urdf  myAGV_gazebo.urdf  myAGV_gazebo.urdf.bak2
src/myagv_description/worlds/: myagv_real_map.world  myagv_real_map.world.bak
src/myagv_navigation2/launch/: myagv_gazebo.launch.py  navigation2_active.launch.py
src/myagv_navigation2/map/: sim_map.yaml
src/mycobot_ros2/: README.md  warehouse_ros_mongo.repos
src/pick_place_pkg/: package.xml
src/pick_place_pkg/pick_place_pkg/: pose_target_controller.py
ydlidar_ros2_driver/launch/: ydlidar_launch.py  ydlidar_launch_view.py
ydlidar_ros2_driver/params/: X2.yaml
(+93 files in other folders)
