<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>myagv_odometry</name>
  <version>0.2.0</version>
  <description>Communicate with esp32 and publish odom topic</description>
  <maintainer email="weijun.xie@elephantrobotics.com">weijun.xie</maintainer>
  <license>BSD-3-Clause license</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>robot_localization</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>myagv_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
